--- a/Persistence/Persistence.csproj
+++ b/Persistence/Persistence.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Core\Data\Data.csproj" />
+      <ProjectReference Include="..\Core\Domain\Domain.csproj" />
+    </ItemGroup>
+
 </Project>
