added auth logic, first views and Helpers

--- a/Mvc/Mvc.csproj
+++ b/Mvc/Mvc.csproj
@@ -14,10 +14,11 @@
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.1" />
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.5" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Data\Migrations" />
+      <ProjectReference Include="..\Services\Services.csproj" />
     </ItemGroup>
 
 </Project>
