--- a/Mvc/Mvc.csproj
+++ b/Mvc/Mvc.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Persistence\Persistence.csproj" />
       <ProjectReference Include="..\Services\Services.csproj" />
     </ItemGroup>
 
