--- a/Mvc/Mvc.csproj
+++ b/Mvc/Mvc.csproj
@@ -22,4 +22,8 @@
       <ProjectReference Include="..\Services\Services.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Pages" />
+    </ItemGroup>
+
 </Project>
