added logic for adding student to group and adding subject to group

--- a/Mvc/Mvc.csproj
+++ b/Mvc/Mvc.csproj
@@ -26,4 +26,9 @@
       <Folder Include="Pages" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Home\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Home\Privacy.cshtml" />
+    </ItemGroup>
+
 </Project>
